--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+# ClickOnce support
+*.manifest binary
+*.application binary
+*.deploy binary
